--- a/estilos/style.css
+++ b/estilos/style.css
@@ -35,6 +35,9 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 2px 10px #00000091;
+
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
