--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -9,13 +9,13 @@
     }
 
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 30%;
         height: 100%;
     }
 
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 70%;
     }
 }
@@ -37,5 +37,13 @@
     section#login > div#formulario {
         float: right;
         width: 50%;
+    }
+
+    div#formulario h1 {
+        font-size: 2em;
+    }
+
+    div#formulario p{
+        font-size: 1.3em;
     }
 }
