--- a/estilos/style.css
+++ b/estilos/style.css
@@ -52,3 +52,30 @@ section#login > div#formulario {
     display: block;
     padding: 10px;
 }
+
+div#formulario h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario p {
+    text-align: center;
+    font-size: .8em;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    margin-top: 5px;
+    background-color: #08bd68;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: rgb(8, 156, 82);
+}
