--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,11 +1,12 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 768px) and (max-width: 992px) { /*configuração para Tablet*/
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
     section#login {
         width: 90vw;
+        height: 300px;
     }
 
     section#login > div#imagem {
@@ -18,6 +19,10 @@
         float: left;
         width: 70%;
     }
+    
+    div#formulario p {
+        font-size: 1em;
+    }
 }
 
 @media screen and (min-width: 992px) {
@@ -25,7 +30,8 @@
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
     section#login {
-        width: 990px;
+        width: 90vw;
+        height: 400px;
     }
 
     section#login > div#imagem {
@@ -44,6 +50,6 @@
     }
 
     div#formulario p{
-        font-size: 1.3em;
+        font-size: 1em;
     }
 }
