--- a/estilos/style.css
+++ b/estilos/style.css
@@ -27,7 +27,7 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+   
     overflow: hidden;
 
     background-color: white;
@@ -37,7 +37,8 @@ section#login {
     box-shadow: 0px 2px 10px #00000091;
 
     transition: width .3s, height .3s;
-    transition-timing-function: ease;
+    transition-timing-function: ease; 
+    transform: translate(-50%, -50%);
 }
 
 section#login > div#imagem {
@@ -65,21 +66,41 @@ div#formulario p {
 
 form > div.campo {
     background-color: #5f2c82;
+    border: 2px solid #5f2c82;
     display: block;
-    border-radius: 5px;
+    border-radius: 8px;
     width: 100%;
     height: 40px;
     margin: 5px 0px;
 }
-form label {
-    display: none;
+
+div.campo > span {
+    color: white;
+    font-size: 1.6em;
+    padding: 5px;
 }
+
+div.campo > input {
+    background-color: #36bb7d;
+    font-size: 1em;
+    width: calc(100% - 42px);
+    height: 100%;
+
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;    
+    transform: translateY(-6px);
+}
+
+div.campo > input:focus-within {
+    background-color: white;
+}
+
 form > input[type=submit] {
     display: block;
     font-size: 1em;
     width: 100%;
     height: 40px;
-    margin-top: 8px;
     background-color: #08bd68;
     color: white;
     border: none;
@@ -99,12 +120,12 @@ form > a.botao {
     font-size: 1em;
     width: 100%;
     height: 40px;
-    padding: 5px;
+    padding-top: 5px;
+    margin-top: 5px;
     background-color: white ;
     color:  #08bd68;
     border: 1px solid  #08bd68;
     border-radius: 5px;
-    margin-top: 8px;
     cursor: pointer;
 }
 
