--- a/estilos/style.css
+++ b/estilos/style.css
@@ -23,6 +23,14 @@ main {
     width: 100vw;
 }
 
+main.container{
+    display: flex;
+
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+}
+
 section#login {
     position: absolute;
     top: 50%;
@@ -36,7 +44,7 @@ section#login {
     border-radius: 20px;
     box-shadow: 0px 2px 10px #00000091;
 
-    transition: width .3s, height .3s;
+    transition: width .1,5s, height .1,5s;
     transition-timing-function: ease; 
     transform: translate(-50%, -50%);
 }
